# hacknc24

./: .gitignore
backend/: pyproject.toml  tickers.csv
backend/app/: load_data.py  main.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py
backend/app/services/: neo4j_setup.py  pinecone_setup.py  stock_data_loader.py
backend/rag-pipeline/: chunk_processor.py  embedding_processor.py  file_io.py  main.py  pdf_processor.py  sentence_splitter.py
frontend/my-app/: package-lock.json  package.json
frontend/my-app/src/app/: page.tsx
frontend/my-app/src/app/signin/: page.tsx  supabaseClient.js
frontend/my-app/src/app/signup/: page.tsx
frontend/my-app/src/components/: ChatWindow.tsx
