[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["gorilla97 <pranav.kosuri1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
requests = "^2.32.3"
uvicorn = "^0.32.0"
transformers = "^4.46.1"
pinecone-client = "^5.0.1"
neo4j = "^5.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
