[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["gorilla97 <pranav.kosuri1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
requests = "^2.32.3"
uvicorn = "^0.32.0"
transformers = "^4.46.1"
pinecone-client = "^5.0.1"
neo4j = "^5.26.0"
python-dotenv = "^1.0.1"
pinecone = {extras = ["grpc"], version = "^5.3.1"}
pandas = "^2.2.3"
pydantic-settings = "^2.6.1"
yfinance = "^0.2.48"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
